--- a/twitter-server/package.json
+++ b/twitter-server/package.json
@@ -9,10 +9,15 @@
     "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "prisma": "^5.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "@prisma/client": "5.19.1",
+    "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "graphql": "^16.9.0",
     "tsc-watch": "^6.2.0"
   }
 }
